--- a/style.css
+++ b/style.css
@@ -48,7 +48,11 @@
   padding: 25px;
   background-color:#F7F7FA ;
   box-shadow: 2px 2px 10px 0px rgba(81, 80, 118, 0.1);
+}
 
+.product-image {
+  width: 290px;
+  height: 245px;
 }
 
 .product-category {
@@ -100,4 +104,5 @@
 .product-price-container {
   display: flex;
   justify-content: space-between;
+  margin-top: 25px;
 }
